--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
+    "solid-js": "^1.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
